--- a/.github/workflows/2.yaml
+++ b/.github/workflows/2.yaml
@@ -20,7 +20,7 @@ env:
   REPO_URL: https://github.com/King-Of-Knights/openwrt-6.x/
   REPO_BRANCH: main
   FEEDS_CONF: ipq6000/feeds.conf.ecm
-  CONFIG_FILE: ipq6000/.config.ecm
+  CONFIG_FILE: ipq6000/2.config
   DIY_P1_SH: ipq6000/diy-part1.sh
   DIY_P2_SH: ipq6000/diy-part2.sh
   UPLOAD_BIN_DIR: false
