--- a/ipq6000/2.config
+++ b/ipq6000/2.config
@@ -166,7 +166,7 @@ CONFIG_PACKAGE_terminfo=y
 # CONFIG_PACKAGE_ttyd is not set
 CONFIG_PACKAGE_ucode-mod-lua=y
 CONFIG_PACKAGE_unzip=y
-# CONFIG_PACKAGE_v2ray-plugin=y
+# CONFIG_PACKAGE_v2ray-plugin is not set
 # CONFIG_PACKAGE_wifi-scripts is not set
 # CONFIG_PACKAGE_wireless-regdb is not set
 # CONFIG_PACKAGE_wpad-openssl is not set
