--- a/ipq6000/2.config
+++ b/ipq6000/2.config
@@ -242,3 +242,4 @@ CONFIG_PACKAGE_ucode-mod-uloop=y
 # CONFIG_PACKAGE_kmod-fs-ntfs3 is not set
 # CONFIG_PACKAGE_kmod-fs-vfat is not set
 # CONFIG_PACKAGE_kmod-fs-xfs is not set
+# CONFIG_PACKAGE_shadowsocks-libev is not set
