--- a/ipq6000/2.config
+++ b/ipq6000/2.config
@@ -40,7 +40,7 @@ CONFIG_PACKAGE_dns2tcp=y
 CONFIG_PACKAGE_dosfstools=y
 CONFIG_PACKAGE_etherwake=y
 CONFIG_PACKAGE_f2fsck=y
-CONFIG_PACKAGE_fdisk=y
+# CONFIG_PACKAGE_fdisk is not set
 # CONFIG_PACKAGE_firewall is not set
 CONFIG_PACKAGE_firewall4=y
 # CONFIG_PACKAGE_hostapd-common is not set
